--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,3 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap");
+// @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700&display=swap");
 
-$body-font-family: "Source Sans Pro", sans-serif !default;
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap");
+
+// $body-font-family: "Source Sans Pro", sans-serif !default;
+$body-font-family: "Montserrat", sans-serif !default;
